# data2excel

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: cross-release.yaml  main.yml  musl.yml  rust_build.yml
src/: main.rs  reportstruct.rs
src-jython/: data_json.json  database.py  load_jars.py  main.py  resultsetutils.py
