[package]
name = "data2excel"
version = "0.1.0"
repository = "https://github.com/DarkwingDuck48/data2excel"
edition = "2018"
keywords = ["excel"]
exclude = ["tests/**/*", "src-jython/**/*"]
authors = ["Maxim Britvin <maksbritvin@gmail.com>"]

[dependencies]
rust_xlsxwriter = {version = "0.70.0", features = ["chrono", "zlib"]}
clap = {version = "4.5.9", features = ["derive", "string"]}
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
log = "0.4.22"
encoding_rs = "0.8.34"
toml = "0.8.14"


